# Flatland

./: .gitignore  Quick Guide to Flatland Library.md  README.md  UsefulLinks.md  aicrowd.json  license.txt  run-LNS.py  run-PP.py  run-parallel-LNS.py  run.sh  run_example.py  sample-agent-input.txt  sample-map-input.txt  sample-paths-output.txt  test.py
CBS-corridor/: CMakeLists.txt  README.md  run_batch.py  run_test2.2.py  run_testMCP.py  run_test_malfunction.py
CBS-corridor/CBSH-rect-cmake/: CMakeLists.txt  CPR.cpp  CPR.h  Conflict.cpp  Conflict.h  ConstraintTable.cpp  ConstraintTable.h  CorridorReasoning.cpp  CorridorReasoning.h  ICBSNode.cpp  ICBSNode.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.cpp  LLNode.h  LNS.cpp  LNS.h  MCP.cpp  MCP.h  MDD.cpp  MDD.h  OnlinePP.cpp  OnlinePP.h  RectangleReasoning.cpp  RectangleReasoning.h  ReservationTable.cpp  ReservationTable.h  SLLNode.cpp  SLLNode.h  SingleAgentICBS.cpp  SingleAgentICBS.h  SinglePlanning.cpp  SinglePlanning.h  SinglePlanningFlat.cpp  SinglePlanningFlat.h  action_converter.h  agents_loader.cpp  agents_loader.h  common.cpp  common.h  (+9 more)
CBS-corridor/PythonCBS/: CMakeLists.txt  PythonCBS.cpp  PythonCBS.h  test1.cpp
CBS-corridor/data_analysis/: data_analysis.py  lns.py
Flatland Instance Generator/: Generator.ipynb  README.md
Flatland Instance Generator/.ipynb_checkpoints/: Generator-checkpoint.ipynb
Flatland log reader/: Reader.ipynb  run_log.xlsx
Flatland2019/Round 1/: Round 1 Run py.ipynb  Round 1.ipynb  agents.txt  map.txt  round1.py
Flatland2019/solution/flatland-challenge-starter-kit-master/ECBS/: CMakeCache.txt  CMakeLists.txt  ECBS  Makefile  cmake_install.cmake  driver.cpp
Flatland2019/solution/flatland-challenge-starter-kit-master/ECBS/inc/: ecbs_search.h
Flatland2019/solution/flatland-challenge-starter-kit-master/ECBS/instances/: lak503dmap-100agents-0.agents  lak503dmap-100agents-10.agents  lak503dmap-100agents-19.agents  lak503dmap-100agents-32.agents  lak503dmap-100agents-38.agents  lak503dmap-100agents-41.agents  lak503dmap-100agents-43.agents  lak503dmap-100agents-9.agents
Flatland2020/: Controllers.py  MapDecoder.py  README.md  STN.py  aicrowd.json  apt.txt  docker_run.sh  my_observation_builder.py  run-200s.py  run-CPR.py  run-LNS+replan+delay.py  run-LNS+replan.py  run-LNS.py  run-adhoc.py  run-basic.py  run.py  run.sh  run_round1.py
Flatland2020/config/: agents.txt  map.txt
Flatland2020/starter-kit/: apt.txt  environment.yml
Flatland2020SubmissionKit/: .gitignore  run-200s.py  run-CPR.py  run-LNS+replan.py  run.py
MCP/: mcp.py
Mapf-solver/: CMakeLists.txt  CMakeSettings.json
Mapf-solver/PythonAPI/: PythonCBS.cpp  PythonCBS.h
Mapf-solver/src/: CPR.cpp  CPR.h  ConstraintTable.cpp  ConstraintTable.h  LLNode.cpp  LLNode.h  LNS.cpp  LNS.h  MCP.cpp  MCP.h  SinglePlanning.cpp  SinglePlanning.h  action_converter.h  agents_loader.cpp  agents_loader.h  common.cpp  common.h  compute_heuristic.cpp  compute_heuristic.h  flat_map_loader.cpp  flat_map_loader.h  map_loader.cpp  map_loader.h
Round 1/: 1.txt.npy  2  Flatland_Library_Test.ipynb  README.md  Round 1 Plan.md  Round 1 Run py.ipynb  Round 1.ipynb  a1.out  agents.txt  edges.txt  idx_curr_node.txt  idx_node.txt  map.txt  path.txt  path_test.txt  paths.txt  round1.py  round1_copy.py  start_goals.txt  temp_render_path.py
Round 1/.ipynb_checkpoints/: Flatland_Library_Test-checkpoint.ipynb  Round 1 Run py-checkpoint.ipynb  Round 1-checkpoint.ipynb
Round 1/ECBS/: ECBS  README.md  cmake_install.cmake  driver.cpp
Round 1/ECBS/inc/: common.h  grid2D.h  (+5 more)
Round 1/config/: config_10082019_013817.pkl  idx2node_0.pkl  idx2node_10.pkl  idx2pos_0.pkl  idx2pos_10082019_013817.pkl  node2idx_0.pkl
Round 2/: Round 2 Plan.md
Round1/: Round 1.ipynb  path_test.txt  round1.py  temp_render_path.py
Round1/.ipynb_checkpoints/: Flatland_Library_Test-checkpoint.ipynb  Round 1 Run py-checkpoint.ipynb
Round1/ECBS/: CMakeCache.txt  Makefile  cmake_install.cmake  run-batch.sh
Round1/config/: node2idx_10082019_013817.pkl
Round1/flatland-challenge-starter-kit-master/: FAQ.md  README.md  aicrowd.json  apt.txt  environment.yml  run.sh
Round2/: basic_usage.py  controller.py  flatland_post.py  flatland_post_backup.py  map_decoder.py  path_10272019_003141.txt  stn.py  stn_backup.py
Round2/ECBS/: CMakeCache.txt  ECBS  Makefile  cmake_install.cmake
Round2/config/: agents_10262019_153915.txt  agents_10262019_155158.txt  agents_10272019_003141.txt  config_10262019_153915.pkl  config_10262019_155158.pkl  config_10272019_003141.pkl  idx2node_10262019_153915.pkl  idx2node_10262019_155158.pkl  idx2node_10272019_003141.pkl  idx2pos_10262019_153915.pkl  idx2pos_10262019_155158.pkl  idx2pos_10272019_003141.pkl  map_10262019_153915.txt  map_10262019_155158.txt  map_10272019_003141.txt  node2idx_10262019_153915.pkl  node2idx_10262019_155158.pkl  node2idx_10272019_003141.pkl
temp/: action_converter.h  run_round1.py
temp/test_cases/: test_25_0.pkl  test_25_1.pkl  test_25_10.pkl  test_25_2.pkl  test_25_3.pkl  test_25_4.pkl  test_25_5.pkl  test_25_6.pkl  test_25_7.pkl  test_25_8.pkl  test_25_9.pkl  test_33_1.pkl  test_35_1.pkl  test_35_2.pkl  test_35_3.pkl  test_35_4.pkl  test_35_5.pkl  test_35_6.pkl
test-neurips2020-round1-v1/: README.md  load.py  metadata.csv
test-neurips2020-round1-v1/Test_0/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_1/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_10/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_11/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_12/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_13/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_2/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
test-neurips2020-round1-v1/Test_3/: Level_0.json  Level_0.pkl  Level_1.json  Level_1.pkl
time_allocation/: 285.csv  execuation_time.csv  hill_clambing.py  hill_climbing.py
(+100 files in other folders)
